preventing horizontal scroll in some browsers when animating the view in or out

--- a/app/styles/style.less
+++ b/app/styles/style.less
@@ -40,6 +40,7 @@ body {
 
 scroll, [scroll] {
   overflow-y: auto;
+  overflow-x: hidden;
   -webkit-overflow-scrolling: touch;
 }
 
